Edited read me
Edited read me file with changes