@@ -1,46 +1,50 @@
-Official Shopizer 2.0.0
--------------------
-Java open source e-commerce software
+# Shopizer
 
-- Shopping cart
-- Catalogue
-- Search
-- Checkout
-- Administration
+Shopizer is a free open source Java e-commerce software that is ideal for every online shop or business.
+
+Create your online store in minutes using the secure, fast and reliable application right out of the box or integrate it to your existing technology by using Shopizer's set of tools, APIs and a fully open source customizable environment.
+
+<img src="http://www.shopizer.com/common/images/ecommerce-community.jpg"
+ alt="Snowplow logo" width="395px " height="231px" title="Snowplow" align="right" />
+
+Shopizer is built by a dedicated, agile community of Java and e-commerce experts who are motivated by the desire to create the perfect software that is easily adaptable to the demanding practices and changing trends of e-commerce. Shopizer's team is developing for developers first; we are working in a continuous release and delivery environment, which allows us to put out new features and ideas at faster pace. Our technology stack is based on well known, proven technology such as Java, Spring, Hibernate and JQuery. 
 
 
-To get the code:
--------------------
-Clone the repository:
-$ git clone git://github.com/shopizer-ecommerce/shopizer.git
 
-If this is your first time using Github, review http://help.github.com to learn the basics.
+ 
 
-To run the application:
--------------------	
-From the command line with Maven:
-$ cd sm-core
-$ mvn clean install
+<br/><br/>
+**To find out more, please check out the [Shopizer website] [website]**
 
-$ cd sm-shop
-$ mvn clean install
+Shopizer provide Web and mobile e-commerce application, tools and APIs for building awesome online stores !!!
 
-copy sm-shop/target/sm-shop.war to tomcat or any other application server deployment dir
+| **Agility** 												               | **Community**												              | **Portability**																							                  |
+|--------------------------------------------------------------------------|--------------------------------------------------------------------------|---------------------------------------------------------------------------------------------------------------------------|
+|   ![i1] [agility-image]                                                  |       ![i2] [community-image]                                            |         ![i3] [portability-image]                                                                                            |
+| Move quickly with the needs <br/> of your application                    |       Driven by a community <br/>of e-commerce experts                   |        Deploy to 'Platform as a Service' </br>or 'Infrastructure as service' <br/> cloud environments                     |
 
-Increase heap space to 1024 m or at least 512 m
 
-If you are using Tomcat edit catalina.bat for windows users or catalina.sh for linux / max users
+## Why Shopizer
 
-export JAVA_OPTS="-Xms1024m -Xmx1024m -XX:MaxPermSize=256m" in Linux / Mac
-set JAVA_OPTS="-Xms1024m -Xmx1024m -XX:MaxPermSize=256m" in Windows
+* **Moble Ready** Responsive web and responsive emails, easy theming with frameworks such as bootstrap css and Zurb foundation.
+* **Commerce Engine** Lean and fast application that will help you build your online store effectively and efficiently. Built in shopping cart, inventory management and order flow that run standalone or can be integrated to an existing application. Java and RESTFul API. 
+* **Open source** The code is open source under LGPL licence and is built with reliable Java frameworks such as Spring and Hibernate  
 
-Access the deployed web application at: http://localhost:8080/sm-shop/shop
+## Read more
 
-Acces the admin section at: http://localhost:8080/sm-shop/admin
+| **Technical Docs (Coming soon)**        | **[Setup Guide] [setup]**     | **[Contributing] [contributing]**           |
+|-----------------------------------------|-------------------------------|---------------------------------------------|
+| [![i4] [techdocs-image]][doc]                  | [![i5] [setup-image]] [setup]     | [![i6] [contributing-image]][contributing]                |
 
-username : admin
-password : password
 
-The instructions above will let you run the application with default settings and configurations.
-Please read the instructions on how to connect to MySQL, configure an email server and configure other subsystems
-The documentation is available here http://www.shopizer.com
+[agility-image]: http://umeshawasthi.github.io/shopizer-documentation/images/agility.PNG
+[community-image]: http://umeshawasthi.github.io/shopizer-documentation/images/community.PNG
+[portability-image]: http://umeshawasthi.github.io/shopizer-documentation/images/portability.PNG
+[website]: http://www.shopizer.com
+
+[setup]:https://github.com/shopizer-ecommerce/shopizer/wiki/Setup
+[contributing]:https://github.com/shopizer-ecommerce/shopizer/wiki/Contribution
+[doc]:https://github.com/shopizer-ecommerce/shopizer
+[techdocs-image]: http://umeshawasthi.github.io/shopizer-documentation/images/document.png
+[setup-image]: http://umeshawasthi.github.io/shopizer-documentation/images/setup.png
+[contributing-image]: http://umeshawasthi.github.io/shopizer-documentation/images/document.png
